[gd_scene load_steps=3 format=2]

[ext_resource path="res://GUI/Reward/RewardCardArea.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

[node name="RewardCardPosition" type="Position2D"]
script = ExtResource( 1 )

[node name="RewardCardArea" type="Area2D" parent="."]

[node name="RewardCardShape" type="CollisionShape2D" parent="RewardCardArea"]
shape = SubResource( 1 )
[connection signal="input_event" from="RewardCardArea" to="." method="_on_RewardCardArea_input_event"]
[connection signal="mouse_entered" from="RewardCardArea" to="." method="_on_RewardCardArea_mouse_entered"]
[connection signal="mouse_exited" from="RewardCardArea" to="." method="_on_RewardCardArea_mouse_exited"]
